<resources>
    <string name="app_name">Weather App</string>
    <string name="weather_matters_nwe_ve_got_the_detail">Weather Matters,\nWe\'ve Got The Detail</string>
    <string name="develop_by_nmustafa_ubaid">Develop By\nMustafa Ubaid</string>
    <string name="textview">textview</string>
    <string name="today">Today</string>
    <string name="degree">25°C</string>
    <string name="sunny">Sunny</string>
    <string name="min_23_22_c">Min :23.22°C</string>
    <string name="max_23_22_c">Max :23.22°C</string>
    <string name="tuesday">Tuesday</string>
    <string name="_1_jun_2024">1 jun 2024</string>
    <string name="humidity">Humidity</string>
    <string name="_70">70</string>
    <string name="_00_00">00:00</string>
    <string name="conditions">Conditions</string>
    <string name="suuny">Suuny</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="_0_00_m_s">0.00 M/s</string>
    <string name="Hpa">0000 Hpa</string>
    <string name="_00">00 %</string>
    <string name="sea">Sea</string>
    <string name="network_error">network error</string>
    <string name="_00_00_c">00:00°C</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">sunRise</string>
    <string name="my_image_description">My Image Description</string>
</resources>